Salesforce CPQ/main/default/objects/TimingLog__c/fields/Element__c.field-meta.xml
<CustomField>
    <fullName>Element__c</fullName>
    <description>Element name</description>
    <label>Element</label>
    <length>80</length>
    <type>Text</type>
</CustomField>