Salesforce CPQ/main/default/objects/TimingLog__c/fields/Finish__c.field-meta.xml
<CustomField>
    <fullName>Finish__c</fullName>
    <description>Finishing CPU time</description>
    <label>Finish</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>