Salesforce CPQ/main/default/objects/TimingLog__c/fields/Log__c.field-meta.xml
<CustomField>
    <fullName>Log__c</fullName>
    <description>Log entry</description>
    <inlineHelpText>Log entry</inlineHelpText>
    <label>Log</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>