Salesforce CPQ/main/default/objects/TimingLog__c/fields/Start__c.field-meta.xml
<CustomField>
    <fullName>Start__c</fullName>
    <description>Starting CPU time</description>
    <inlineHelpText>Starting CPU time</inlineHelpText>
    <label>Start</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>