Salesforce CPQ/main/default/objects/TimingLog__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <description>Target of the request</description>
    <label>URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>