Salesforce CPQ/main/default/objects/TimingLog__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Element__c</columns>
    <columns>Start__c</columns>
    <columns>Finish__c</columns>
    <columns>Total__c</columns>
    <columns>Log__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>